# ShrimpDev-Public

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  ConfigManager  Datei(en) kopieren (Paste)  Public  Public)  R2411.py)  README.md  Report  ShrimpDev.ini  ShrimpDev_PUBLIC_EXPORT  app.py  captured  config.json  config_manager  create  dev_intake.ini  eable Pipeline Tasks block + document tasks-required rule  ini_writer  ks into PIPELINE for GUI visibility  learning_engine.py  learning_journal.json  legacy  main_gui.py  open  pyproject.toml  tatus -sb  tools_keep.txt
Reports/: Report_R2591.md
_Journal/: moves_20251209.jsonl
_Pipeline/: CANONICAL_PIPELINE_POINTER.txt  Pipeline_R2026_20251208_214919.txt  README_MARKER.md
config/: intake.ini  learningjournal.ini
docs/: AGENT_PLAYBOOK.md  AI_FAILSAFE.md  AI_PATCH_VALIDATOR.md  ARCHITECTURE.md  ARCHITECTURE_MAP.md  ARCHITECTURE_PERSISTENCE.md  ARCHITEKTUR_ShrimpDev_vs_ShrimpHub.md  ARCH_INDEX.md  ARCH_Purge.md  ASSISTANT_BRIEFING.md  Agent_Tab_Recommendations.md  Architecture_Actions_and_Gating.md  Architecture_Config.md  Architecture_ContextMenus.md  Architecture_DnD_FileOut.md  Architecture_Docking.md  Architecture_Guard.md  Architecture_Lessons_Learned.md  Architecture_RunnerExecution.md  Architecture_ShrimpDev.md  Architecture_ShrimpDev_R2075_20251210_201450.txt  Architecture_ShrimpDev_R2077_20251210_213142.txt  Architecture_ShrimpDev_R2080_20251211_085357.txt  Architecture_ShrimpDev_R2081_20251211_095355.txt  Architecture_ShrimpDev_R2086_20251211_122808.txt  Architecture_ShrimpDev_R2086_20251212_215741.txt  (+114 more)
(+1014 files in other folders)
